Fix deprecated newInstance() call